minor style fix

--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -879,7 +879,8 @@
     }
 
     .accordion ul li div {
-        overflow: visible !important
+        overflow: visible !important;
+        background-position: center;
     }
 
         .accordion ul li div a {
