--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -811,26 +811,40 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 100
 }
 
-.nb_bannersec .np_bannerContentOuter.CountWrap {
-    z-index: 10
+.nb_bannersec .nb_bnr_count.rgt,
+.nb_bannersec .nb_bnr_count.lft {
+    position: absolute;
+    top: 50%;
+    z-index: 1
+}
+
+.nb_bannersec .nb_bnr_count.lft {
+    left: 20px;
+}
+
+.nb_bannersec .nb_bnr_count.rgt {
+    right: 20px;
 }
 
 .nb_bannersec .np_bannerContentOuter {
-    max-width: 1090px;
     margin: 0 auto;
     width: 100%;
     left: 50%;
+    padding: 0 70px;
     transform: translateX(-50%);
     top: 0;
     position: absolute;
-    height: 100%
+    height: 100%;
+    display: grid
 }
 
     .nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap {
         position: absolute;
-        left: 162px;
+        max-width: 1400px;
         top: 50%;
-        transform: translateY(-50%)
+        transform: translateY(-50%);
+        align-self: center;
+        justify-self: center
     }
 
         .nb_bannersec .np_bannerContentOuter .nb_bannerCaptionWrap h5 {
@@ -7453,3 +7467,4 @@ input[type="checkbox"] {
 .wishlist-table .list-icon {
     font-size: 24px;
 }
+
