--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SliderPartial.cshtml
@@ -5,62 +5,40 @@
          class="carousel slide nb_hm_bnr_carrousle carousel-fade"
          data-ride="carousel">
         <div class="carousel-inner">
-            @{int i = 0;}
             @foreach (var item in Model)
             {
                 var rgbaColor = System.Drawing.ColorTranslator.FromHtml(!string.IsNullOrEmpty(item.ForeColor) ? @item.ForeColor : string.Empty);
                 var sliderTitleBackgroundColor = ("rgba(" + rgbaColor.R + "," + rgbaColor.G + "," + rgbaColor.B + "," + (item.ForeColorOpacity > 0 ? @item.ForeColorOpacity.ToString("#.#") : "1") + ")");
                 var sliderTitleColor = (!string.IsNullOrEmpty(item.TextColor) ? @item.TextColor : string.Empty);
-                if (i == 0)
-                {
-                    <div class="carousel-item active">
-                        <img class="d-block w-100"
-                             src="@ViewBag.BaseFilePath@item.Image"
-                             alt=" @item.ImageAltTag" />
-                        <div class="np_bannerContentOuter">
-                            <div class="nb_bannerCaptionWrap">
-                                <h5 style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor">@item.Text</h5>
-                                <a style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor" href="@item.ButtonLinkUrl">@item.ButtonText</a>
-                            </div>
-                        </div>
-                    </div>
-                }
-                else
-                {
-                    <div class="carousel-item">
-                        <img class="d-block w-100"
-                             src="@ViewBag.BaseFilePath@item.Image"
-                             alt=" @item.ImageAltTag" />
-                        <div class="np_bannerContentOuter">
-                            <div class="nb_bannerCaptionWrap">
-                                <h5 style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor">
-                                    @item.Text
-                                </h5>
-                                <a style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor" href="@item.ButtonLinkUrl">@item.ButtonText</a>
-                            </div>
-                        </div>
-                    </div>
 
-                }
-                i++;
+                <div class="carousel-item @(item.Id == Model.First().Id ? "active" : "")">
+                    <img class="d-block w-100"
+                         src="@ViewBag.BaseFilePath@item.Image"
+                         alt=" @item.ImageAltTag" />
+                    <div class="np_bannerContentOuter">
+                        <div class="nb_bannerCaptionWrap">
+                            <h5 style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor">
+                                @item.Text
+                            </h5>
+                            <a style="color:@sliderTitleColor; background-color:@sliderTitleBackgroundColor" href="@item.ButtonLinkUrl">@item.ButtonText</a>
+                        </div>
+                    </div>
+                </div>
             }
-
             @if (Model.Count() > 1)
             {
-                <div class="np_bannerContentOuter CountWrap">
-                    <a href="#NorthumbriaCarousle"
-                       role="button"
-                       data-slide="prev"
-                       class="nb_bnr_count lft">
-                        <i class="fa fa-angle-left fa-2x"></i>
-                    </a>
-                    <a href="#NorthumbriaCarousle"
-                       role="button"
-                       data-slide="next"
-                       class="nb_bnr_count rgt">
-                        <i class="fa fa-angle-right fa-2x"></i>
-                    </a>
-                </div>
+                <a href="#NorthumbriaCarousle"
+                   role="button"
+                   data-slide="prev"
+                   class="nb_bnr_count lft">
+                    <i class="fa fa-angle-left fa-2x"></i>
+                </a>
+                <a href="#NorthumbriaCarousle"
+                   role="button"
+                   data-slide="next"
+                   class="nb_bnr_count rgt">
+                    <i class="fa fa-angle-right fa-2x"></i>
+                </a>
             }
         </div>
         <script>
