pagination and search bugs fixed

--- a/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app_responsive.css
@@ -1076,6 +1076,7 @@
         margin-bottom: 5px !important
     }
 
+    .prd_lst_boxouter .brand-name,
     .prd_lst_boxouter .prdName {
         font-size: 12px;
         margin-bottom: 6px
