--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -1953,13 +1953,15 @@ input[type=number]::-webkit-outer-spin-button {
         box-shadow: 0px 0px 23px 2px #f3eeee;
     }
 
+    .prd_lst_boxouter .brand-name,
     .prd_lst_boxouter .prdName {
         width: 100%;
         float: left;
         text-align: center;
-        font-family: "primaryfont_SemiBold";
+        font-family: "primaryfont_Normal";
         font-size: 20px;
-        max-height: 50px
+        max-height: 50px;
+        color: #111
     }
 
     .prd_lst_boxouter .foot {
@@ -1982,6 +1984,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-bottom: 15px !important
 }
 
+.brand-name,
 .prdName {
     min-height: unset;
     margin-bottom: 12px
@@ -6969,10 +6972,6 @@ body.modal-open {
 
 .nb_prod_bottomdes .content {
     white-space: pre-line
-}
-
-.prd_lst_boxouter .prdName {
-    color: #111
 }
 
 .search-item a,
