--- a/WarehouseEcommerce/Views/Theme/University/Products/Brands1.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/Brands1.cshtml
@@ -41,15 +41,15 @@
                     <div class="row list-product-row">
                         @foreach (var item in Model)
                         {
-                            <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4  col-xl-3 list-product-col">
+                            <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 list-product-col">
                                 <div class="prd_lst_boxouter">
                                     <span class="imagewrap">
                                         <a href="@Url.Action("List", "Products", new { filters = "brands>" + item.Name.Replace(" ", "_") })">
                                             <img src="@(!string.IsNullOrEmpty(item.ImagePath) ? ViewBag.BaseFilePath + item.ImagePath : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
                                         </a>
                                     </span>
-                                    <h3 class="prdName">
-                                        <a class="prdName" href="@Url.Action("List", "Products", new { filters = "brands>" + item.Name.Replace(" ", "_") })">
+                                    <h3 class="brand-name">
+                                        <a class="brand-name" href="@Url.Action("List", "Products", new { filters = "brands>" + item.Name.Replace(" ", "_") })">
                                             @item.Name
                                         </a>
                                     </h3>
