--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ProductListItemActionsButtons.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ProductListItemActionsButtons.cshtml
@@ -1,58 +1,45 @@
 ﻿@model Ganedata.Core.Entities.Domain.ProductMaster
 @using Ganedata.Core.Entities.Enums
 
+
+@Html.Partial("_ProductByAttributeSelectorModal")
+
 @if (Model.ProductType != ProductKitTypeEnum.Grouped && Model.ProductType != ProductKitTypeEnum.Kit)
 {
-
-    if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@Model, ViewBag.SiteId) && Model.ProductType != ProductKitTypeEnum.ProductByAttribute)
-    {
-        <li>
-            <a href="javascript:;" onclick="addToCart(@Model.ProductId)"><i class="cart-icon icon-shopping-cart"></i></a>
-        </li>
-
-
-    }
-    else if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@Model, ViewBag.SiteId) && Model.ProductType == ProductKitTypeEnum.ProductByAttribute)
-    {
-        <li>
-            <a href="javascript:;" onclick="showProductByAttributeSelector('@Model.SKUCode')"><i class="cart-icon icon-shopping-cart"></i></a>
-        </li>
-    }
-    else
-    {
-        var isItemInNotifyList = Model.WebsiteWishListItems.Any(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
-
-        if (!isItemInNotifyList)
+    <li>
+        @if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@Model, ViewBag.SiteId) && Model.ProductType != ProductKitTypeEnum.ProductByAttribute)
         {
-            <li>
-                <a href="javascript:;" onclick="@(Model.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToNotifyList(" + Model.ProductId + ")" : "showProductByAttributeSelector('" + Model.SKUCode + "', true)")" id="notification-bell_@Model.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:black"></i></a>
-            </li>
+            <a href="javascript:;" onclick="addToCart(@Model.ProductId)"><i class="cart-icon icon-shopping-cart"></i></a>
+        }
+        else if (Ganedata.Core.Services.Inventory.IsProductAvailableToSell(@Model, ViewBag.SiteId) && Model.ProductType == ProductKitTypeEnum.ProductByAttribute)
+        {
+            <a href="javascript:;" onclick="showProductByAttributeSelector('@Model.SKUCode')"><i class="cart-icon icon-shopping-cart"></i></a>
         }
         else
         {
-            <li>
+            var isItemInNotifyList = Model.WebsiteWishListItems.Any(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && u.IsNotification);
+
+            if (!isItemInNotifyList)
+            {
+                <a href="javascript:;" onclick="@(Model.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToNotifyList(" + Model.ProductId + ")" : "showProductByAttributeSelector('" + Model.SKUCode + "', true)")" id="notification-bell_@Model.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:black"></i></a>
+            }
+            else
+            {
                 <a href="javascript:;" onclick="@(Model.ProductType != ProductKitTypeEnum.ProductByAttribute ? "redirectToWishListByConfirmation()" : "showProductByAttributeSelector('" + Model.SKUCode + "', true)")" id="notification-bell_@Model.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="color:red"></i></a>
-            </li>
-
+            }
         }
-
-
-    }
-
+    </li>
 
     var isItemInWishList = Model.WebsiteWishListItems.Any(u => u.IsDeleted != true && u.UserId == ViewBag.CurrentUserId && !u.IsNotification);
 
-
-    if (!isItemInWishList)
-    {
-        <li>
+    <li>
+        @if (!isItemInWishList)
+        {
             <a href="javascript:;" id="wish_@Model.ProductId" onclick="@(Model.ProductType != ProductKitTypeEnum.ProductByAttribute ? "addToWishList(" + Model.ProductId + ")" : "showProductByAttributeSelector('" + Model.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: black;"></i></a>
-        </li>
-    }
-    else
-    {
-        <li>
+        }
+        else
+        {
             <a href="javascript:;" id="wish_@Model.ProductId" onclick="@(Model.ProductType != ProductKitTypeEnum.ProductByAttribute ? "redirectToWishListByConfirmation()" : "showProductByAttributeSelector('" + Model.SKUCode + "', true)")"><i class="icon-love list-icon" style="color: red;"></i></a>
-        </li>
-    }
+        }
+    </li>
 }
